--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-"This is a folie that I use to finish my python practice from runoob.com~"
+"This is a file that I use to finish my python practice from runoob.com~"
